// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renders correctly 1`] = `
.c0 {
  margin: 0;
  font-size: 34px;
  line-height: 40px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

<h1
  className="c0"
  fontFamily="featured"
  fontSize="xxxl"
  spacing="base"
/>
`;

exports[`Heading should match snapshot with scale="level-1" 1`] = `
.c0 {
  margin: 0;
  font-size: 34px;
  line-height: 40px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

<h1
  className="c0"
  fontFamily="default"
  fontSize="xxxl"
  spacing="base"
/>
`;

exports[`Heading should match snapshot with scale="level-2" 1`] = `
.c0 {
  margin: 0;
  font-size: 30px;
  line-height: 28px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

<h2
  className="c0"
  fontFamily="default"
  fontSize="xxl"
  spacing="base"
/>
`;

exports[`Heading should match snapshot with scale="level-3" 1`] = `
.c0 {
  margin: 0;
  font-size: 26px;
  line-height: 28px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

<h3
  className="c0"
  fontFamily="default"
  fontSize="xl"
  spacing="base"
/>
`;

exports[`Heading should match snapshot with scale="level-4" 1`] = `
.c0 {
  margin: 8px 0;
  font-size: 22px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

<h4
  className="c0"
  fontFamily="default"
  fontSize="lg"
  spacing="base"
/>
`;

exports[`Heading should match snapshot with scale="level-5" 1`] = `
.c0 {
  margin: 24px 0 8px 0;
  font-size: 18px;
  line-height: 20px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

<h5
  className="c0"
  fontFamily="default"
  fontSize="md"
  spacing="half"
/>
`;
